--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ header{
     justify-content: space-evenly;
     background: rgb(51,51,51);
     /* background: #272736; */
-    padding: 1rem 9%;
+    padding: .3rem 9%;
 }
 
 header .logo img{
@@ -601,7 +601,8 @@ footer .shop p{
 
 footer .shop p a{
     text-decoration: none;
-    color: rgb(214,214,214);
+    /* color: rgb(214,214,214); */
+    color: rgb(25,115,204);
 }
 
 .copyright{
